--- a/configs/models.yml
+++ b/configs/models.yml
@@ -1,9 +1,9 @@
 urlDictList:
-  - modelName: linear-regrssion
-    modelUrl: http://admin:MXPFQPduiKut@127.0.0.1:31112/function/linear-regression
+  - modelName: linear-regression
+    modelUrl: http://admin:admin@10.60.150.177:31112/function/lr
   - modelName: support-vector-machine
-    modelUrl: http://admin:MXPFQPduiKut@127.0.0.1:31112/function/svr
+    modelUrl: http://admin:admin@10.60.150.177:31112/function/svr
   - modelName: random-forest
-    modelUrl: http://admin:MXPFQPduiKut@127.0.0.1:31112/function/rf
+    modelUrl: http://admin:admin@10.60.150.177:31112/function/rf
   - modelName: lstm
-    modelUrl: http://admin:MXPFQPduiKut@127.0.0.1:31112/function/lstm
+    modelUrl: http://admin:admin@10.60.150.177:31112/function/lstm
