--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ utils/__pycache__/CrudDb.cpython-39.pyc
 utils/PrecisionSensor/__pycache__/ClassificationMetrics.cpython-39.pyc
 utils/PrecisionSensor/__pycache__/PrecisionSensor.cpython-39.pyc
 utils/PrecisionSensor/__pycache__/RegressionMetrics.cpython-39.pyc
+utils/ModelSchedualingCenter/__pycache__/DynamicSelect.cpython-39.pyc
+utils/ModelSchedualingCenter/__pycache__/DynamicWeight.cpython-39.pyc
