--- a/configs/models.yml
+++ b/configs/models.yml
@@ -11,3 +11,5 @@ urlDictList:
   - modelName: lstm
     modelUrl: http://admin:admin@10.60.150.177:31112/function/lstm
     model_id: 4
+
+callback_url: http://10.60.150.177:8888
