--- a/.gitignore
+++ b/.gitignore
@@ -5,19 +5,4 @@
 /.git
 /.utils/MonitorCenter/.idea
 /.utils/PrecisionSensor/.idea
-utils/__pycache__/__init__.cpython-39.pyc
-utils/__pycache__/DataLoader.cpython-39.pyc
-utils/__pycache__/EnsembleModel.cpython-39.pyc
-utils/__pycache__/FuncMonitor.cpython-39.pyc
-utils/MonitorCenter/__pycache__/__init__.cpython-39.pyc
-utils/MonitorCenter/__pycache__/Cadvisor.cpython-39.pyc
-utils/MonitorCenter/__pycache__/KubeStateMetrics.cpython-39.pyc
-utils/MonitorCenter/__pycache__/MonitorCenter.cpython-39.pyc
-utils/MonitorCenter/__pycache__/NodeExporter.cpython-39.pyc
-utils/MonitorCenter/__pycache__/PrometheusManager.cpython-39.pyc
-utils/__pycache__/CrudDb.cpython-39.pyc
-utils/PrecisionSensor/__pycache__/ClassificationMetrics.cpython-39.pyc
-utils/PrecisionSensor/__pycache__/PrecisionSensor.cpython-39.pyc
-utils/PrecisionSensor/__pycache__/RegressionMetrics.cpython-39.pyc
-utils/ModelSchedualingCenter/__pycache__/DynamicSelect.cpython-39.pyc
-utils/ModelSchedualingCenter/__pycache__/DynamicWeight.cpython-39.pyc
+*.pyc
