--- a/configs/monitor.yml
+++ b/configs/monitor.yml
@@ -1,6 +1,6 @@
-openFaaSGateway: 10.60.150.177:31112
-openFaaSBasicAuth:
-  user: admin
-  password: admin
-prometheusGateway: 10.60.150.177:31119
+knativeGateway: 10.60.150.177:31112
+# openFaaSBasicAuth:
+#   user: admin
+#   password: admin
+prometheusGateway: 10.60.150.177:30090
 
